# QuEvolutio

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
examples/: example_harmonic_1D.py  example_harmonic_2D.py  utils_1D.py  utils_2D.py
examples/chebyshev/: driven_ho_1d.py  standard_ho_1d.py  standard_ho_2d.py
examples/crank_nicolson/: driven_ho_1d.py  standard_ho_1d.py
examples/semi_global/: driven_ho_1d.py  driven_ho_2d.py
examples/split_operator/: driven_ho_1d.py  standard_ho_1d.py  standard_ho_2d.py
examples/utils/: numerical.py  visualisation.py
quevolutio/core/: aliases.py  domain.py  mathematical.py  simulation.py  tdse.py
quevolutio/mathematical/: affine.py  approximation.py
quevolutio/mathematical/approximation/: chebyshev.py
quevolutio/propagators/: chebyshev.py  crank_nicolson.py  semi_global.py  split_operator.py
tests/: test_affine.py  test_approximation.py  visual.py
tests/test_mathematical/: test_affine.py
tests/test_mathematical/test_approximation/: test_chebyshev.py
